tests/baselines/reference/parserStrictMode15.errors.txt
==== tests/cases/compiler/parserStrictMode15.ts (2 errors) ====
    "use strict";
    delete a;
    ~~~~~~
!!! parserStrictMode15.ts(2,1): error TS1101: 'delete' cannot be called on an identifier in strict mode.
           ~
!!! parserStrictMode15.ts(2,8): error TS2095: Cannot find name 'a'.